# PyRustChainAI

./: README.md
body/: blockchain.py  federated_learning.py  node.py  utils.py
rust_modules/blockchain_rs/: Cargo.toml
rust_modules/blockchain_rs/src/: lib.rs
