[package]
name = "blockchain_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = "0.19.2"
chrono = "0.4.26"
blake2 = "0.10.6"
serde = { version = "1.0.183", features = ["derive"] }
bincode = "1.3.3"
serde_json = "1.0.105"